# rhia-copilot-dashboard

./: .env  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
RHIA_Copilot_Brief/: .env  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
RHIA_Copilot_Brief/src/: router.py
RHIA_Copilot_Brief/src/app/: main.py  redis_client.py
RHIA_Copilot_Brief/src/app/api/v1/: router.py
RHIA_Copilot_Brief/src/app/api/v1/endpoints/: approval.py  brief.py  config.py  data.py  feedback.py  generate.py
RHIA_Copilot_Brief/src/app/core/: constants.py  dependencies.py  security.py  settings.py
RHIA_Copilot_Brief/src/app/db/: crud.py  models.py  session.py
RHIA_Copilot_Brief/src/app/graph/: brief_generator.py  feedback_graph.py  state.py
RHIA_Copilot_Brief/src/app/graph/nodes/: answer_scorer.py  feedback_llm_executor.py  feedback_prompt_builder.py  llm_executor.py  mapper.py  prompt_builder.py  rag_retriever.py  verifier.py
RHIA_Copilot_Brief/src/app/models/: brief.py  section.py  user_pref.py
RHIA_Copilot_Brief/src/app/services/: brief_template.py  confidence_scoring.py  llm_agent.py  llm_client.py  llm_orchestrator.py  prompt_builder.py  qdrant_client.py  rag_retriever.py  salary_service.py  skill_service.py
RHIA_Copilot_Brief/src/app/telemetry/: logging.py  tracing.py
RHIA_Copilot_Brief/src/app/workers/: tasks.py
RHIA_Copilot_Brief/src/scripts/: precommit.sh  seed_qdrant.py
public/: robots.txt  sitemap.xml
src/: App.tsx  index.css
src/api/: api.ts  index.ts
src/hooks/: useSEO.ts  (+14 more)
supabase/: config.toml
(+156 files in other folders)
